上次传错了 再次更新

--- a/接口文档/消息推送/实时推送.md
+++ b/接口文档/消息推送/实时推送.md
@@ -2,9 +2,8 @@
 
 ## 1.接口描述
 
-接口请求域名:/notify/```json
-{userId}
-```
+接口请求域名:/notify/{userId}
+
 用户登录时通过该接口连接webscoket，需传入userId，当某项目组进行了项目修改后将会发送信息到所有在线的该项目组成员客户端
 
 ## 2.连接成功
@@ -31,14 +30,13 @@
 {
     "success":1,
     "info":"消息推送",
-    "update":```json
+    "update":
 {
-        "groupId":"AXCVE4"
-        groupname:"第三项目组",
-        username:"阿卡安康",
-        updateTime:12312314324,
-        notifyId:123
+        "groupId":"AXCVE4",
+        "groupname":"第三项目组",
+        "username":"阿卡安康",
+        "updateTime":12312314324,
+        "notifyId":123
     }
-```
 }
 ```
