--- a/接口文档/用户与组权限/登录注册退出/找回密码.md
+++ b/接口文档/用户与组权限/登录注册退出/找回密码.md
@@ -17,6 +17,7 @@
 
 |  参数名称  |  类型  |         描述         |
 | :-------: | :----: | :------------------: |
+| user | object | 用户信息 |
 | token | String | 用户凭证 |
 | success | int | 状态值,1成功,0失败 |
 | info | string | 状态描述 |
@@ -36,8 +37,14 @@
 
 ```json
 {
+    "user":{
+        "email":"2323@qq.com",
+        "username":"asdad",
+        "id":123,
+        "createTime":12312312343
+    },
     "token":"asdasdadqwe2133dwsd",
     "success":1,
-    "info":"邮件发送成功"
+    "info":"找回密码并登录成功"
 }
 ```
