--- a/接口文档/消息推送/消息列表渲染.md
+++ b/接口文档/消息推送/消息列表渲染.md
@@ -21,15 +21,14 @@
 ```json
 {
     "notifyList":[
-        ```json
 {
-        "groupId":"AXCVE4"
-        groupname:"第三项目组",
-        username:"阿卡安康",
-        updateTime:12312314324,
-        notifyId:123
+        "groupId":"AXCVE4",
+        "groupname":"第三项目组",
+        "username":"阿卡安康",
+        "updateTime":12312314324,
+        "notifyId":123
         }
-```
+
     ],
     "success":1,
     "info":"列表渲染成功"
