--- a/其他相关文档/接口生成器数据库设计.md
+++ b/其他相关文档/接口生成器数据库设计.md
@@ -28,7 +28,7 @@
 |   字段   |   类型   |  长度 | 主键 | 是否可为空 | 是否唯一 | 备注 |
 |:-------:|:--------:|:-----:|:---:|:---:|:--:|:--:|
 | group_id | varchar | 255 | 联合主键 | 否 | 联合唯一 | 组id唯一六位字符串 |
-| id  |   varchar   |  255  | 联合主键  |否 | 联合唯一 | 用户id |
+| user_id  |   varchar   |  255  | 联合主键  |否 | 联合唯一 | 用户id |
 | type | int | 10 | 否 | 否 | 否 | 用户身份{1管理员，2贡献者，3普通用户} |
 
 ## 版本更新表  tb_update
@@ -37,5 +37,5 @@
 |:-------:|:--------:|:-----:|:---:|:---:|:--:|:--:|
 | group_id | varchar | 255 | 否 | 否 | 否 | 更新发生的项目编号 |
 | user_id  | int | 10 | 否 | 否 | 否 | 更新的用户 |
-| time | dateTime | | 否 | 否 | 否 | 更新的时间 |
+| update_time | dateTime | | 否 | 否 | 否 | 更新的时间 |
 | id | int | 10 | 是 | 否 | 是 | 更新的编号 |
