--- a/接口文档/消息推送/消息列表渲染.md
+++ b/接口文档/消息推送/消息列表渲染.md
@@ -2,7 +2,7 @@
 
 ## 1.接口描述
 
-接口请求域名:notify/showList
+接口请求域名:user/showList
 获取消息列表
 请求方式:get
 
@@ -23,10 +23,10 @@
     "notifyList":[
 {
         "groupId":"AXCVE4",
-        "groupname":"第三项目组",
+        "groupName":"第三项目组",
         "username":"阿卡安康",
         "updateTime":12312314324,
-        "notifyId":123
+        "id":123
         }
 
     ],
