--- a/接口文档/用户与组权限/登录注册退出/验证邮件.md
+++ b/接口文档/用户与组权限/登录注册退出/验证邮件.md
@@ -11,6 +11,7 @@
 | 参数名称  | 必选  |  类型  |         描述         |
 | :-------: | :---: | :----: | :------------------: |
 |  email  |  是   | String | 邮箱 |
+| type | 是 | Number | 验证邮件类型1.注册 2.找回密码 |
 
 ## 3.输出参数
 
