--- a/接口文档/用户与组权限/组权限/列出组.md
+++ b/接口文档/用户与组权限/组权限/列出组.md
@@ -26,7 +26,7 @@
 {
     "groupList":[
 {
-            "name":"高三数学特训",
+            "groupName":"高三数学特训",
             "groupId":"XHZE46",
             "jsonFile":"jsonStorage/advceefeFWDCSAZ.JSON",
             "md5":"asdasdade23edwscsdcs"
