--- a/接口文档/用户与组权限/登录注册退出/用户登录.md
+++ b/接口文档/用户与组权限/登录注册退出/用户登录.md
@@ -10,7 +10,7 @@
 
 | 参数名称  | 必选  |  类型  |         描述         |
 | :-------: | :---: | :----: | :------------------: |
-| username | 是 | String | 用户名 |
+| username | 是 | String | 邮箱 |
 | password | 是 | String | 密码 |
 
 ## 3.输出参数
