--- a/接口文档/用户与组权限/组权限/列出组.md
+++ b/接口文档/用户与组权限/组权限/列出组.md
@@ -29,7 +29,8 @@
             "groupName":"高三数学特训",
             "groupId":"XHZE46",
             "jsonFile":"jsonStorage/advceefeFWDCSAZ.JSON",
-            "md5":"asdasdade23edwscsdcs"
+            "md5":"asdasdade23edwscsdcs",
+            "type":2
         }
     ],
     "success":1,
