--- a/其他相关文档/接口生成器数据库设计.md
+++ b/其他相关文档/接口生成器数据库设计.md
@@ -11,7 +11,7 @@
 | email | varchar | 255 | 否 | 否 | 是 | email |
 |   username   | varchar |  255  | 否  | 否 | 是 | 用户昵称 |
 |  password     | varchar | 255 | 否 | 否 | 否 | md5加密密码 |
-| id  |   varchar   |  255  | 是  |否 | 是 | id |
+| user_id  |   int   |  10  | 是  |否 | 是 | id |
 | create_time | dateTime | | 否 | 否 | 否 | 注册时间 |
 
 ## 组表 tb_group
@@ -20,15 +20,15 @@
 |:-------:|:--------:|:-----:|:---:|:---:|:--:|:--:|
 | group_id | varchar | 255 | 是 | 否 | 是 | 组id唯一六位字符串 |
 | group_name | varchar | 255 | 否 | 否 | 否 | 接口组名称 |
-| json_file | varchar | 255 | 否 | 否 | 否 | json文件保存的相对路径 |
-| md5 | varchar | 255 | 否 | 否 | 否 | 否 | 当前版本md5码 |
+| json_file | varchar | 255 | 否 | 是 | 否 | json文件保存的相对路径 |
+| md5 | varchar | 255 | 否 | 否 | 是 | 当前版本md5码 |
 
 ## 组成员表 tb_menber
 
 |   字段   |   类型   |  长度 | 主键 | 是否可为空 | 是否唯一 | 备注 |
 |:-------:|:--------:|:-----:|:---:|:---:|:--:|:--:|
 | group_id | varchar | 255 | 联合主键 | 否 | 联合唯一 | 组id唯一六位字符串 |
-| user_id  |   varchar   |  255  | 联合主键  |否 | 联合唯一 | 用户id |
+| user_id  |   int   |  10        | 联合主键  |否 | 联合唯一 | 用户id |
 | type | int | 10 | 否 | 否 | 否 | 用户身份{1管理员，2贡献者，3普通用户} |
 
 ## 版本更新表  tb_update
