--- a/其他相关文档/接口生成器数据库设计.md
+++ b/其他相关文档/接口生成器数据库设计.md
@@ -23,7 +23,7 @@
 | json_file | varchar | 255 | 否 | 是 | 否 | json文件保存的相对路径 |
 | md5 | varchar | 255 | 否 | 否 | 是 | 当前版本md5码 |
 
-## 组成员表 tb_menber
+## 组成员表 tb_member
 
 |   字段   |   类型   |  长度 | 主键 | 是否可为空 | 是否唯一 | 备注 |
 |:-------:|:--------:|:-----:|:---:|:---:|:--:|:--:|
