--- a/接口文档/用户与组权限/个人页/修改用户名.md
+++ b/接口文档/用户与组权限/个人页/修改用户名.md
@@ -10,7 +10,7 @@
 
 | 参数名称  | 必选  |  类型  |         描述         |
 | :-------: | :---: | :----: | :------------------: |
-| name | 是 | String | 用户名 |
+| username | 是 | String | 用户名 |
 
 ## 3.输出参数
 
