--- a/接口文档/用户与组权限/组权限/列出组.md
+++ b/接口文档/用户与组权限/组权限/列出组.md
@@ -8,17 +8,34 @@
 
 ## 2.输入参数
 
-无
+| 参数名称  | 必选  |  类型  |         描述         |
+| :-------: | :---: | :----: | :------------------: |
+|  pageNum  |  是   | Number  |    页码      |
+| pageSize | 是 | Number | 页面大小 |
+| search | 是 | String | 模糊搜索 |
 
 ## 3.输出参数
 
 |  参数名称  |  类型  |         描述         |
 | :-------: | :----: | :------------------: |
 | groupList | Arrary | 组列表 |
+| pageNum  | Number | 当前访问的是第几页 |
+|  pages   | Number |    总共有多少页    |
+|  total   | Number |  总共有多少条数据  |
 | success | int | 状态值,1成功,0失败 |
 | info | string | 状态描述 |
 
 ## 4.用例
+
+### 输入
+
+```json
+{
+    "pageNum":1,
+    "pageSize":15,
+    "search":"asdasda"
+}
+```
 
 ### 输出
 
@@ -33,6 +50,9 @@
             "type":2
         }
     ],
+    "pageNum":1,
+    "pages":12,
+    "total":125,
     "success":1,
     "info":"组获取成功"
 }
