--- a/接口文档/消息推送/消息列表渲染.md
+++ b/接口文档/消息推送/消息列表渲染.md
@@ -8,15 +8,34 @@
 
 ## 2.输入参数
 
+| 参数名称  | 必选  |  类型  |         描述         |
+| :-------: | :---: | :----: | :------------------: |
+|  pageNum  |  是   | Number  |    页码      |
+| pageSize | 是 | Number | 页面大小 |
+
 ## 3.输出参数
 
 |  参数名称  |  类型  |         描述         |
 | :-------: | :----: | :------------------: |
 | notifyList | Arrary | 消息列表 |
+| pageNum  | Number | 当前访问的是第几页 |
+|  pages   | Number |    总共有多少页    |
+|  total   | Number |  总共有多少条数据  |
 | success | int | 状态值,1成功,0失败 |
 | info | string | 状态描述 |
 
 ## 4.用例
+
+### 输入
+
+```json
+{
+    "pageNum":1,
+    "pageSize":15
+}
+```
+
+### 输出
 
 ```json
 {
@@ -30,6 +49,9 @@
         }
 
     ],
+    "pageNum":1,
+    "pages":12,
+    "total":125,
     "success":1,
     "info":"列表渲染成功"
 }
