--- a/接口文档/用户与组权限/组权限/组管理员/查看组成员.md
+++ b/接口文档/用户与组权限/组权限/组管理员/查看组成员.md
@@ -11,12 +11,18 @@
 | 参数名称  | 必选  |  类型  |         描述         |
 | :-------: | :---: | :----: | :------------------: |
 | groupId | 是 | String | 组id |
+| pageSize | 是 | Number | 页面大小 |
+|  pageNum  |  是   | Number  |    页码      |
+| search | 是 | String | 模糊搜索 |
 
 ## 3.输出参数
 
 |  参数名称  |  类型  |         描述         |
 | :-------: | :----: | :------------------: |
 | memberList | Arrary | 成员列表 |
+| pageNum  | Number | 当前访问的是第几页 |
+|  pages   | Number |    总共有多少页    |
+|  total   | Number |  总共有多少条数据  |
 | success | int | 状态值,1成功,0失败 |
 | info | string | 状态描述 |
 
@@ -26,7 +32,10 @@
 
 ```json
 {
-    "groupId":"AXDV64"
+    "pageNum":1,
+    "pageSize":15,
+    "groupId":"AXDV64",
+    "search":"asdasda"
 }
 ```
 
@@ -42,6 +51,9 @@
             "email":"sadasdsd@qq.com"
         }
     ],
+    "pageNum":1,
+    "pages":12,
+    "total":125,
     "success":1,
     "info":"组删除成功"
 }
