--- a/其他相关文档/接口生成器数据库设计.md
+++ b/其他相关文档/接口生成器数据库设计.md
@@ -39,3 +39,11 @@
 | user_id  | int | 10 | 否 | 否 | 否 | 更新的用户 |
 | update_time | dateTime | | 否 | 否 | 否 | 更新的时间 |
 | id | int | 10 | 是 | 否 | 是 | 更新的编号 |
+
+### 登录记录表  tb_record
+
+|   字段   |   类型   |  长度 | 主键 | 是否可为空 | 是否唯一 | 备注 |
+|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
+| user_id | int | 10 | 是 | 否 | 是 | 用户Id |
+| ip | String | 50 | 否 | 否 | 否 | 用户ip |
+| login_time | dateTime | default | 否 | 否 | 否 | 登录时间 |
